src/test/deca/context/valid/8_IfThenElse.deca
// Description:
//    Programme minimaliste traitant une somme.
//
// Resultats:
//    Valeur: 1.0
//
// Historique:
//    cree le 01/01/2022

{
        boolean cond = true;
        float i;
        i = 0.0;
        if (cond) {
        	i = 1.0;
        } else {
        	i = 2.0;
        }
        println("Valeur: ", i);
}
